Wed Nov  8 13:24:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora: Improve support for different mesh
	constraints, and move src/org/jcae/mesh/amibe/constraints into
	src/org/jcae/mesh/bora.
	* src/org/jcae/mesh/mesher/ds/MMesh0D.java
	  src/org/jcae/mesh/mesher/ds/MMesh1D.java: Allow initialization
	from within bora meshes.

Mon Nov  6 09:36:57 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: Make the mesh member
	non-static.

Fri Nov  3 18:02:19 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: This class does
	not need to be synchronized.

Fri Nov  3 15:16:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: In Decimate*
	algorithms, reuse v3 to avoid allocating new Vertex instances.

Fri Nov  3 12:20:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java: Let computeNormal3D()
	and computeNormal3DT() return triangle area instead of 2*area.
	This does not change current computations, but is less confusing.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Revert previous
	optimization, it was plain broken.

Thu Nov  2 17:29:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New
	apply(double [] in, double [] out) method to reduce array allocation.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Use it.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Replace
	Quadric3DError(q1,q2) constructor by a new computeQuadric3DError(q1,q2)
	method.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Reuse existing